--- a/src/soc/nvidia/tegra124/Kconfig
+++ b/src/soc/nvidia/tegra124/Kconfig
@@ -18,6 +18,9 @@ if SOC_NVIDIA_TEGRA124
 
 config CHROMEOS
 	select VBOOT_OPROM_MATTERS
+	select VBOOT_STARTS_IN_BOOTBLOCK
+	select SEPARATE_VERSTAGE
+	select CHIPSET_PROVIDES_VERSTAGE_MAIN_SYMBOL
 
 config TEGRA124_MODEL_TD570D
 	bool "TD570D"
