oak/gru: Fix derivative Kconfigs
Add a few missing Kconfig defaults for derivatives of the Oak and Gru
baseboards. Also group all Kconfigs that must change for derivatives
together for easier updating.

BRANCH=None
BUG=None
TEST=None

Change-Id: I95ebb08b4f13f09f2539b451d7b96a826ddf98f8
Signed-off-by: Martin Roth <martinroth@chromium.org>
Original-Commit-Id: ae3f13c1dc323f4c7c4a176a4f5e1285fec312ce
Original-Change-Id: I658130e88daa2d113fd722b0527cf0e7ab66c7ef
Original-Signed-off-by: Julius Werner <jwerner@chromium.org>
Original-Reviewed-on: https://chromium-review.googlesource.com/357922
Original-Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://review.coreboot.org/15605
Tested-by: build bot (Jenkins)
Reviewed-by: Patrick Georgi <pgeorgi@google.com>

--- a/src/mainboard/google/gru/Kconfig
+++ b/src/mainboard/google/gru/Kconfig
@@ -47,11 +47,6 @@ config MAINBOARD_DIR
 	string
 	default google/gru
 
-config MAINBOARD_PART_NUMBER
-	string
-	default "Kevin" if BOARD_GOOGLE_KEVIN
-	default "Gru"
-
 config MAINBOARD_VENDOR
 	string
 	default "Google"
@@ -72,5 +67,19 @@ config CONSOLE_SERIAL_UART_ADDRESS
 	hex
 	depends on DRIVERS_UART
 	default 0xFF1A0000
+
+##########################################################
+#### Update below when adding a new derivative board. ####
+##########################################################
+config MAINBOARD_PART_NUMBER
+	string
+	default "Gru" if BOARD_GOOGLE_GRU
+	default "Kevin" if BOARD_GOOGLE_KEVIN
+
+config GBB_HWID
+	string
+	depends on CHROMEOS
+	default "GRU TEST 5431" if BOARD_GOOGLE_GRU
+	default "KEVIN TEST 1422" if BOARD_GOOGLE_KEVIN
 
 endif # BOARD_GOOGLE_GRU_COMMON
