--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -44,11 +44,6 @@ config MAINBOARD_DIR
 	string
 	default google/oak
 
-config MAINBOARD_PART_NUMBER
-	string
-	default "Elm" if BOARD_GOOGLE_ELM
-	default "Oak" if BOARD_GOOGLE_OAK
-
 config MAINBOARD_VENDOR
 	string
 	default "Google"
@@ -77,15 +72,24 @@ config EC_GOOGLE_CHROMEEC_PD_BOARDNAME
 	string
 	default "oak_pd"
 
+##########################################################
+#### Update below when adding a new derivative board. ####
+##########################################################
+config MAINBOARD_PART_NUMBER
+	string
+	default "Oak" if BOARD_GOOGLE_OAK
+	default "Elm" if BOARD_GOOGLE_ELM
+
 config GBB_HWID
 	string
 	depends on CHROMEOS
-	default "OAK TEST 6858"
+	default "OAK TEST 6858" if BOARD_GOOGLE_OAK
+	default "ELM TEST 3839" if BOARD_GOOGLE_ELM
 
 # All Oak-derivatives count their board IDs as 0 being equivalent to Oak rev6.
 config BOARD_ID_ADJUSTMENT
 	int
 	default 0 if BOARD_GOOGLE_OAK
-	default 7
+	default 7 if BOARD_GOOGLE_ELM
 
 endif # BOARD_GOOGLE_OAK
