intel/amenia: Add Maxim98357a support
Adds Maxim98357a support for amenia
using the generic driver in drivers/generic/max98357

Change-Id: I333d4e810e42309ac76dd90c19f05cf3e3a518f1
Signed-off-by: Sathyanarayana Nujella <sathyanarayana.nujella@intel.com>
Reviewed-on: https://review.coreboot.org/15624
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/mainboard/intel/amenia/Kconfig
+++ b/src/mainboard/intel/amenia/Kconfig
@@ -50,4 +50,7 @@ config INCLUDE_NHLT_BLOBS
 	select NHLT_DA7219
 	select NHLT_MAX98357
 
+config DRIVERS_GENERIC_MAX98357A
+	default y
+
 endif # BOARD_INTEL_AMENIA
