intel/amenia: Add DA7219 support in acpi
Add DA7219 support in acpi.
DA7219 has advanced accessory detection functionality.
Also add DA7219's AAD as a ACPI data node.

Change-Id: I979275cb2ab1e593ff1e5d360bea83b843e45021
Signed-off-by: Sathyanarayana Nujella <sathyanarayana.nujella@intel.com>
Reviewed-on: https://review.coreboot.org/15625
Reviewed-by: Aaron Durbin <adurbin@chromium.org>
Tested-by: build bot (Jenkins)

--- a/src/mainboard/intel/amenia/Kconfig
+++ b/src/mainboard/intel/amenia/Kconfig
@@ -53,4 +53,7 @@ config INCLUDE_NHLT_BLOBS
 config DRIVERS_GENERIC_MAX98357A
 	default y
 
+config DRIVERS_I2C_DA7219
+	default y
+
 endif # BOARD_INTEL_AMENIA
