arch/x86: provide common Intel ACPI hardware definitions
In the ACPI specification the PM1 register locations are well
defined, but the sleep type values are hardware specific. That
said, the Intel chipsets have been consistent with the values
they use. Therefore, provide those hardware definitions as well
a helper function for translating the hardware values to the
more high level ACPI sleep values.

BUG=chrome-os-partner:54977

Change-Id: Iaeda082e362de5d440256d05e6885b3388ffbe43
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://review.coreboot.org/15666
Reviewed-by: Furquan Shaikh <furquan@google.com>
Tested-by: build bot (Jenkins)

--- a/src/acpi/Kconfig
+++ b/src/acpi/Kconfig
@@ -4,3 +4,9 @@ config ACPI_SATA_GENERATOR
 	default n
 	help
 	  Use acpi sata port generator.
+
+config ACPI_INTEL_HARDWARE_SLEEP_VALUES
+	def_bool n
+	help
+	  Provide common definitions for Intel hardware PM1_CNT regiser sleep
+	  values.
