--- a/src/southbridge/intel/ibexpeak/Kconfig
+++ b/src/southbridge/intel/ibexpeak/Kconfig
@@ -20,6 +20,7 @@ if SOUTHBRIDGE_INTEL_IBEXPEAK
 
 config SOUTH_BRIDGE_OPTIONS # dummy
 	def_bool y
+	select ACPI_INTEL_HARDWARE_SLEEP_VALUES
 	select IOAPIC
 	select HAVE_HARD_RESET
 	select HAVE_USBDEBUG
