--- a/src/mainboard/google/reef/Kconfig
+++ b/src/mainboard/google/reef/Kconfig
@@ -22,7 +22,9 @@ config CHROMEOS
 	select CHROMEOS_VBNV_CMOS_BACKUP_TO_FLASH
 	select EC_SOFTWARE_SYNC
 	select LID_SWITCH
+	select SEPARATE_VERSTAGE
 	select VBOOT_OPROM_MATTERS
+	select VBOOT_STARTS_IN_BOOTBLOCK
 	select VIRTUAL_DEV_SWITCH
 
 config DRIVERS_I2C_DA7219
