Use VBOOT_SOURCE instead of hardcoding vboot path
This replaces all occurrences of a hardcoded vboot path to the
VBOOT_SOURCE variable, that may be overridden from the command line,
witch fallback to the source from 3rdparty.

Change-Id: Ia57d498d38719cc71e17060b76b0162c4ab363ed
Signed-off-by: Paul Kocialkowski <contact@paulk.fr>
Reviewed-on: https://review.coreboot.org/15825
Tested-by: build bot (Jenkins)
Reviewed-by: Patrick Georgi <pgeorgi@google.com>
Reviewed-by: Julius Werner <jwerner@chromium.org>

--- a/util/cbfstool/Makefile
+++ b/util/cbfstool/Makefile
@@ -6,6 +6,8 @@ CONFIG_FMD_GENPARSER ?= n
 HOSTCC ?= $(CC)
 OBJCOPY ?= objcopy
 
+VBOOT_SOURCE ?= $(top)/3rdparty/vboot
+
 .PHONY: all
 all: cbfstool fmaptool rmodtool ifwitool
 
