--- a/src/vendorcode/google/chromeos/Kconfig
+++ b/src/vendorcode/google/chromeos/Kconfig
@@ -193,23 +193,23 @@ endmenu # GBB
 menu "Vboot Keys"
 config VBOOT_ROOT_KEY
 	string "Root key (public)"
-	default "3rdparty/vboot/tests/devkeys/root_key.vbpubk"
+	default "$(VBOOT_SOURCE)/tests/devkeys/root_key.vbpubk"
 
 config VBOOT_RECOVERY_KEY
 	string "Recovery key (public)"
-	default "3rdparty/vboot/tests/devkeys/recovery_key.vbpubk"
+	default "$(VBOOT_SOURCE)/tests/devkeys/recovery_key.vbpubk"
 
 config VBOOT_FIRMWARE_PRIVKEY
 	string "Firmware key (private)"
-	default "3rdparty/vboot/tests/devkeys/firmware_data_key.vbprivk"
+	default "$(VBOOT_SOURCE)/tests/devkeys/firmware_data_key.vbprivk"
 
 config VBOOT_KERNEL_KEY
 	string "Kernel subkey (public)"
-	default "3rdparty/vboot/tests/devkeys/kernel_subkey.vbpubk"
+	default "$(VBOOT_SOURCE)/tests/devkeys/kernel_subkey.vbpubk"
 
 config VBOOT_KEYBLOCK
 	string "Keyblock to use for the RW regions"
-	default "3rdparty/vboot/tests/devkeys/firmware.keyblock"
+	default "$(VBOOT_SOURCE)/tests/devkeys/firmware.keyblock"
 
 config VBOOT_KEYBLOCK_VERSION
 	int "Keyblock version number"
