mainboard/intel/galileo: Add FSP 2.0 Kconfig support
Add and adjust the Kconfig flags to support both FSP 1.1 and FSP 2.0
builds for Quark.

TEST=Build and run on Galileo Gen2

Change-Id: I7c5b7efd2635180edcfe4e1a98bb292030117bc8
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/15864
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/mainboard/intel/galileo/Kconfig
+++ b/src/mainboard/intel/galileo/Kconfig
@@ -49,5 +49,12 @@ config USE_FSP1_1
 	bool
 	default n
 	select PLATFORM_USES_FSP1_1
+#	select ADD_FSP_RAW_BIN
+
+config USE_FSP2_0
+	bool
+	default n
+	select PLATFORM_USES_FSP2_0
+	select POSTCAR_STAGE
 
 endif # BOARD_INTEL_QUARK
